--- a/pages/contents/2022-08-25.md
+++ b/pages/contents/2022-08-25.md
@@ -2,7 +2,7 @@
 title: '<書評> 良いコード/悪いコードで学ぶ設計入門 ―保守しやすい 成長し続けるコードの書き方'
 published_at: '2022-08-25'
 updated_at: '2023-07-29'
-categories: 'React,JavaScript'
+categories: 'Book'
 ---
 
 ## 概要
@@ -31,7 +31,7 @@ categories: 'React,JavaScript'
 
 ## 2章: 設計の初歩
 
-**変数への再代入を避ける**
+### 変数への再代入を避ける
 
 変数を使い回すと期待通りの出力にならない可能性があり、バグを埋め込んでしまうことになる。
 
