--- a/pages/contents/2022-01-15.md
+++ b/pages/contents/2022-01-15.md
@@ -2,7 +2,7 @@
 title: 'InnoDBのギャップロックとネクストキーロックについておさらい'
 published_at: '2023-09-18'
 updated_at: '2023-09-18'
-categories: 'Book'
+categories: 'Database,MySQL'
 ---
 
 ## 概要
