--- a/pages/contents/2022-11-13.md
+++ b/pages/contents/2022-11-13.md
@@ -34,7 +34,7 @@ rb_ary_includes(VALUE ary, VALUE item)
 }
 ```
 
-[Source Code](https://github.com/ruby/ruby/blob/master/array.c#L5417-L5430)
+refs. [https://github.com/ruby/ruby/blob/master/array.c#L5417-L5430](https://github.com/ruby/ruby/blob/master/array.c#L5417-L5430)
 
 ```c
 /**
@@ -55,7 +55,8 @@ rb_ary_includes(VALUE ary, VALUE item)
 VALUE rb_equal(VALUE lhs, VALUE rhs);
 ```
 
-[Source Code](https://github.com/ruby/ruby/blob/master/include/ruby/ruby.h#L164-L178)
+refs. [https://github.com/ruby/ruby/blob/master/include/ruby/ruby.h#L164-L178](https://github.com/ruby/ruby/blob/master/include/ruby/ruby.h#L164-L178)
+
 説明によるとオブジェクト同士の比較ということ
 
 ```ruby
@@ -75,7 +76,8 @@ describe "rb_equal" do
 end
 ```
 
-[Source Code](https://github.com/ruby/ruby/blob/master/spec/ruby/optional/capi/object_spec.rb#L764-L779)
+refs. [https://github.com/ruby/ruby/blob/master/spec/ruby/optional/capi/object_spec.rb#L764-L779](https://github.com/ruby/ruby/blob/master/spec/ruby/optional/capi/object_spec.rb#L764-L779)
+
 念の為テストも確認して同値比較メソッドであることを確認
 
 つまり`Array#include?`は1つずつ同値比較をしているので計算量が`O(n)`
@@ -96,7 +98,8 @@ end
 alias member? include?
 ```
 
-[Source Code](https://github.com/ruby/ruby/blob/master/lib/set.rb#L397-L406)
+refs. [https://github.com/ruby/ruby/blob/master/lib/set.rb#L397-L406](https://github.com/ruby/ruby/blob/master/lib/set.rb#L397-L406)
+
 hashでのアクセスにより `O(1)`の計算量を実現していることが分かった
 
 ちなみにSetはイニシャライズでhashとして扱われている
@@ -113,4 +116,4 @@ def initialize(enum = nil, &block) # :yields: o
 end
 ```
 
-[Source Code](https://github.com/ruby/ruby/blob/master/lib/set.rb#L245-L255)
+refs. [https://github.com/ruby/ruby/blob/master/lib/set.rb#L245-L255](https://github.com/ruby/ruby/blob/master/lib/set.rb#L245-L255)
