--- a/pages/contents/2023-12-30.md
+++ b/pages/contents/2023-12-30.md
@@ -27,11 +27,13 @@ Cloudformationを触ってAWSインフラ構築をしたことで、フロント
 
 マネージャーというロールの大変さを痛感した。メンバーに任せるということの大事さと難しさ。
 
+&nbsp;
+
 応用情報技術者試験に合格した。スキマ時間うまく活用できたなと思う。
 
 &nbsp;
 
-また、今後の人生設計を考える上で大学に行きたいという気持ちが強くなってきたことは、一つの指針になってきそう。
+今後の人生設計を考える上で大学に行きたいという気持ちが強くなってきたことは、一つの指針になってきそう。
 
 &nbsp;
 
